# friendly-pancake

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: main.yml  python-app.yml
